--- a/style.css
+++ b/style.css
@@ -1225,10 +1225,10 @@ ul.sf-menu ul li, div.sf-menu ul ul li {
   width: auto !important;
 }
 .nav-down.fixed-on .fixed-top-menu {
-  transform: translate(0,0);
-   -webkit-transform: translate(0,0); /** Safari & Chrome **/
-   -o-transform: translate(0,0); /** Opera **/
-   -moz-transform: translate(0,0); /** Firefox **/
+  transform: translate(0,45px);
+   -webkit-transform: translate(0,45px); /** Safari & Chrome **/
+   -o-transform: translate(0,45px); /** Opera **/
+   -moz-transform: translate(0,45px); /** Firefox **/
 }
 .fixed-top-menu ul {
   list-style: none;
