--- a/style.css
+++ b/style.css
@@ -2784,12 +2784,16 @@ h2.heading span,
 }
 body.blog article {
   padding-bottom: 40px;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #ff6226;
+  margin-bottom: 40px;
+  border-bottom: 1px solid #e8e8e8;
 }
 body.blog article .entry-title {
+  padding-top: 0px;
   padding-bottom: 15px;
   line-height: 1;
+}
+body.blog article .post-img {
+  margin-bottom: 40px;
 }
 .single .entry-content {
   padding-right: 49px;
