--- a/style.css
+++ b/style.css
@@ -2539,7 +2539,7 @@ h2.heading span,
 .nav-single li {
   width: 50%;
 }
-.nav-single li span {
+.nav-single li span {fix
   font-size: 11px;
   font-weight: 700;
 }
