--- a/style.css
+++ b/style.css
@@ -2551,8 +2551,8 @@ h2.heading span,
   color: #000113;
   position: relative;
 }
-.nav-single a:hover :before,
-.nav-single a:hover :after, {
+.nav-single a:hover .next div:before,
+.nav-single a:hover .next div:after, {
   background: #ff6226;
   color: white;
 }
