--- a/style.css
+++ b/style.css
@@ -857,7 +857,7 @@ ul.sf-menu ul, div.sf-menu ul ul {
 	zoom: 1; /* IE7 */
 }
 .sf-menu .dropdown a {
-  padding: 16px 20px 15px 10px;
+  padding: 16px 20px 15px 15px;
 }
 .sf-menu a {
 	color: #13a;
@@ -880,7 +880,8 @@ ul.sf-menu > li.current-cat > a, div.sf-menu ul > ul > li.current-cat > a,
 ul.sf-menu > li.current_page_item > a, div.sf-menu > ul > ul > li.current_page_item > a,
 ul.sf-menu > li.current-menu-item > a, div.sf-menu ul > ul > li.current-menu-item > a,
 ul.sf-menu > li.current-menu-ancestor > a, div.sf-menu > ul > ul > li.current-menu-ancestor > a {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.14);
 }
 ul.sf-menu ul li.current-cat > a, div.sf-menu ul ul ul li.current-cat > a,
 ul.sf-menu ul li.current-menu-item > a, div.sf-menu ul ul ul li.current-menu-item > a,
